    * Added the following methods to PageObject::Elements::Element
      * #when_present
      * #when_visible
      * #when_not_visible
      * #wait_until
  * Handling popups
    * Added #alert to page object to override default alert popup behavior
    * Added #confirm to page object to override default confirm popup behavior
  * Updated to use selenium-webdriver 2.1.0

=== Version 0.1.1 / 2011-07-16
* Enhancements
  * Support for identifying hidden fields by text when using Selenium
  * Support for identifying links by href when using Selenium
  * Updated to use selenium-webdriver 2.0.1
  * Updated to use watir-webdriver 0.2.6

=== Version 0.1 / 2011-07-01
* Enhancements
  * Support for using multiple identifiers when locating the following element:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList
  * Selenium support for using index for the following elements:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList
  * Support name for identification across all elements in Watir
  * Added [] method to SelectList to index Options
  * Added options method to Select List
  * Added support for the following elements
    * Option
  * Updated to use selenium-webdriver 0.2.2
  * Updated to use watir-webdriver 0.2.5

=== Version 0.0.5 / 2011-06-15
* Enhancements
  * Added rows method to Table to return number or rows
  * Added columns method to TableRow to return the number of columns
  * Table now supports Enumerable to iterate over the TableRows
  * TableRow now supports Enumerable to iterate over TableCells
  * Added items method to UnorderedList to return number of ListItems